--- a/config
+++ b/config
@@ -156,6 +156,7 @@ mode "launcher" {
 	bindsym v exec vscode
 	bindsym p exec /opt/cisco/anyconnect/bin/vpnui
 	bindsym b exec flameshot gui
+	bindsym o exec spotify
 
         # back to normal: Enter or Escape
         bindsym Return mode "default"
