--- a/i3/config
+++ b/i3/config
@@ -8,8 +8,6 @@
 # i3 config file (v4)
 #
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
-#
-# TEST TEST TEST
 
 set $mod Mod4
 
@@ -160,6 +158,7 @@ mode "launcher" {
 	bindsym b exec flameshot gui
 	bindsym o exec spotify
 	bindsym t exec typora
+	bindsym n exec nautilus
 
         # back to normal: Enter or Escape
         bindsym Return mode "default"
